set sbt version for scripted test and clarify scalafixEnable test